change .prettierignore and .gitignore

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,37 @@
-node_modules/
-dist/
-coverage/
-logs/
+node_modules
 
-package.json
+dist
+build
+
+.vscode
+.idea
+
+coverage
+
+.gitattributes
+.gitignore
+
+.env
+.env.*
+
+.npm
+.npmrc
+.yarn
+.pnpm
+.yarn-integrity
+.yarnclean
+*.tgz
+yarn.lock
 pnpm-lock.yaml
+package.json
+
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+.eslintignore
+.prettierignore
