--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@iszf-microfrontends/prettier-config",
   "version": "0.0.1",
-  "description": "Shared prettier configuration",
+  "description": "Shared Prettier configuration",
   "main": ".prettierrc.js",
   "files": [
     ".prettierrc.js",
